--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -12,38 +12,39 @@
 
     - name: Create jupyter notebook configuration directory
       file: 
-        path=/home/vagrant/.jupyter 
-        state=directory 
-        owner=vagrant 
-        group=vagrant
+        path: /home/vagrant/.jupyter 
+        state: directory 
+        owner: vagrant 
+        group: vagrant
 
     - name: Install jupyter configuration file
       copy: 
-        src=files/jupyter_notebook_config.py 
-        dest=/home/vagrant/.jupyter 
-        owner=vagrant 
-        group=vagrant
+        src: files/jupyter_notebook_config.py 
+        dest: /home/vagrant/.jupyter 
+        owner: vagrant 
+        group: vagrant
 
     - name: Create jupyter notebook directory
       file: 
-        path=/home/vagrant/notebooks 
-        state=directory 
-        owner=vagrant 
-        group=vagrant
+        path: /home/vagrant/notebooks 
+        state: directory 
+        owner: vagrant 
+        group: vagrant
 
     - name: Install jupyter notebook systemd service
       copy: 
-        src=files/jupyter-notebook.service 
-        dest=/etc/systemd/system
+        src: files/jupyter-notebook.service 
+        dest: /etc/systemd/system
+        mode: 0755
       notify: Reload systemd daemon
 
     - meta: flush_handlers
 
     - name: Enable and start jupyter notebook service
       service: 
-        name=jupyter-notebook 
-        enabled=yes 
-        state=started
+        name: jupyter-notebook 
+        enabled: yes 
+        state: started
 
   handlers:
 
