--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -3,6 +3,7 @@
 
   vars:
     - anaconda_make_sys_default: True
+    - anaconda_pkg_update: False
 
   roles:
     - andrewrothstein.anaconda
@@ -48,6 +49,7 @@
     - name: Install python library through pip requirements
       pip:
         requirements: /home/vagrant/notebooks/requirements.txt
+        executable: /usr/local/anaconda/bin/pip
 
     - name: install python library via conda
       conda: name={{ item }} state=latest executable="/usr/local/anaconda/bin/conda"
