--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -45,6 +45,7 @@
     - name: Install python library through pip requirements
       pip:
         requirements: /home/vagrant/notebooks/requirements.txt
+        executable: /usr/local/anaconda/bin/pip
 
     - name: install python library via conda
       conda: name={{ item }} state=latest executable="/usr/local/anaconda/bin/conda"
